--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,9 +1,37 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>admin</ion-title>
+    <ion-buttons slot="start">
+      <ion-button color="primary" routerLink="/connexion">
+        <ion-icon slot="icon-only" name="arrow-back" ></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button color="primary" name="home" routerLink="/home">Accueil</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
-</ion-content>
+<ion-content>
+  <h1>
+
+    <strong>Bienvenue dans votre Espace Admin</strong>
+  </h1>
+
+<div class="image">
+  <img src="assets/images/logo2.png" alt="logo">
+
+</div>
+
+
+
+  
+  <form id="form">
+    
+    
+    <ion-button expand="block" shape="round" routerLink="/listeDemandes" color="tertiary">Consuler les demandes</ion-button>
+    <ion-button expand="block" shape="round"  routerLink="/listeAgents" color="tertiary" >Consulter les agents</ion-button>
+    <ion-button expand="block" shape="round" routerLink="/list-agent" color="tertiary">Affecter un Agent</ion-button>
+  </form>
+  </ion-content>
+
