--- a/src/app/agent/agent.page.html
+++ b/src/app/agent/agent.page.html
@@ -1,9 +1,38 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>agent</ion-title>
+    <ion-buttons slot="start">
+      <ion-button color="primary" routerLink="/connexion">
+        <ion-icon slot="icon-only" name="arrow-back" ></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button color="primary" name="home" routerLink="/home">Accueil</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
-</ion-content>
+
+<ion-content>
+  <h1>
+
+    <strong>Bienvenue dans votre Espace AGENT</strong>
+  </h1>
+
+<div class="image">
+  <img src="assets/images/logo2.png" alt="logo">
+
+</div>
+
+
+
+  
+  <form id="form">
+    
+    
+    <ion-button expand="block" shape="round" routerLink="/listeDemandesAgent">Consuler les demandes</ion-button>
+    <ion-button expand="block" shape="round"  routerLink="/gestionChéquiers" >Gestion des chéquiers</ion-button>
+    <ion-button expand="block" shape="round" routerLink="/changerMotDePasseAgent">Changer mot de passe</ion-button>
+  </form>
+  </ion-content>
+
