--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,34 @@
-<ion-header [translucent]="true">
+
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+   
+    <!-- <h1>GESTIBANK</h1> -->
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-content>
+  <h1>
+
+    <strong>Bienvenue à Gestibank</strong>
+  </h1>
+   
+    <p> Votre application bancaire à vos côtés!</p>
+
+<div class="image">
+  <img src="assets/images/logo2.png" alt="logo">
+
+</div>
+
+
+
+  
+  <form >
+    
+    
+    <ion-button expand="block" shape="round" routerLink="/inscription">Inscription</ion-button>
+    <ion-button expand="block" shape="round"  routerLink="/connexion" >Connexion</ion-button>
+    <ion-button expand="block" shape="round" routerLink="/devise">Devise</ion-button>
+  </form>
+  </ion-content>
+
