--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,98 @@
-#container {
-  text-align: center;
 
+#accueil{
+  --background:url(../../assets/images/logoblack.gif) no-repeat center 160px / 250px 250px fixed;
+
+}
+.buttons{
   position: absolute;
-  left: 0;
+  margin: auto;
+  top: 250px;
   right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  bottom: 0;
+  left: 0;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.entete{
+  position: absolute;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 450px;
+  left: 0;
+}
+ion-toolbar{
+  --background:#f5f5f3;
+
+  ion-button{
+      text-transform: initial;
+      font-size: 17px;
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
+ion-content{
+  --background:#f5f5f3;
+  align-items: center;
 
-  color: #8c8c8c;
+  .image{
+    text-align: center;
+  }
+  
+   #header{
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       
+       h1{
+           font-weight: 700;
+           font-size: 26px;
+           color:#010100;
+           margin-bottom: 15%;
+          }
+          
+          img{
+              height: 125px;
+              width: 125px;
+              border-radius: 50%;
+              border: 8px solid #fff;
+          }
+      }
+      h1{
+        text-align: center;
+        font-weight: 700;
+        font-size: 26px;
+        color:#010100;
+        margin-top: 15%;
+       }
+      p{
+        text-align: center;
+        color:#b6b6b6;
+        margin-top: 5px;
+        font-size: 20px;
+    }
+   
+    img{
+      height: 125px;
+      width: 125px;
+      border-radius: 50%;
+      border: 5px solid rgb(175, 205, 240);
+      text-align: center;
+      margin-bottom: 25px;
+      
+  }
+form{
+    margin-top: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
 
-  margin: 0;
+    ion-button{
+        margin-top: 15px;
+        height: 48px;
+        font-size: 18px;
+        text-transform: initial;
+        border-radius: 50%;
+        box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.08);
+        --box-shadow:none;
+      
+    }
 }
-
-#container a {
-  text-decoration: none;
 }
