--- a/src/app/connexion/connexion.page.html
+++ b/src/app/connexion/connexion.page.html
@@ -1,9 +1,34 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>connexion</ion-title>
+    <ion-buttons slot="start">
+      <ion-button color="primary" routerLink="/home">
+        <ion-icon slot="icon-only" name="arrow-back" ></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button color="primary" routerLink="/inscription">S'inscrire</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+<div id=header>
+  <h1>Se connecter</h1>
+  <img src="assets/images/logo2.png" alt="logo">
+</div>
+
+  <ion-input [(ngModel)]="email" placeholder="Email"></ion-input>
+  <ion-input [(ngModel)]="password" type="password" placeholder="mot de passe" ></ion-input>
+ 
+
+
+  
+  <ion-button expand="block" shape="round"  (click)="connexion()">Connexion</ion-button>
 
 </ion-content>
+
+
+
+  
+
+
