--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -11,12 +11,13 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
   <h1>
 
-    <strong>Bienvenue dans votre Espace Admin</strong>
+    <strong color="tertiary">Bienvenue à votre<br>Espace Admin</strong>
   </h1>
+   
+    
 
 <div class="image">
   <img src="assets/images/logo2.png" alt="logo">
@@ -26,12 +27,34 @@
 
 
   
-  <form id="form">
+  <form >
     
     
+     
     <ion-button expand="block" shape="round" routerLink="/listeDemandes" color="tertiary">Consuler les demandes</ion-button>
     <ion-button expand="block" shape="round"  routerLink="/listeAgents" color="tertiary" >Consulter les agents</ion-button>
     <ion-button expand="block" shape="round" routerLink="/list-agent" color="tertiary">Affecter un Agent</ion-button>
   </form>
   </ion-content>
+
+
+<!--
+ 
+
+
+<ion-content>
+  <h1>
+
+    <strong >Bienvenue dans votre <br> Espace Admin</strong>
+  </h1>
+
+
+  <img src="assets/images/logo2.png" alt="logo">
+
+  
+  <form >
+    
+   
+  </form>
+  </ion-content> -->
 
