finalisation de la creation espace agent design

--- a/src/app/agent/agent.page.html
+++ b/src/app/agent/agent.page.html
@@ -16,7 +16,7 @@
 <ion-content>
   <h1>
 
-    <strong>Bienvenue dans votre Espace AGENT</strong>
+    <strong>Bienvenue dans votre <br> Espace AGENT</strong>
   </h1>
 
 <div class="image">
