--- a/src/app/devise/devise.page.html
+++ b/src/app/devise/devise.page.html
@@ -17,6 +17,10 @@
 
 >
 
+<div class="image">
+  <img src="assets/images/logo2.png" alt="logo">
+</div>
+
   <ion-list style="margin-bottom: 25px;">
     <ion-list-header style="margin-top: 25px; margin-bottom: 25px;">
       <ion-label style="text-align: center;">
