--- a/src/app/connexion/connexion.page.scss
+++ b/src/app/connexion/connexion.page.scss
@@ -30,10 +30,13 @@ ion-content{
             }
             
             img{
-                height: 125px;
-                width: 125px;
+                height: 145px;
+                width: 145px;
                 border-radius: 50%;
-                border: 8px solid #fff;
+                border: 5px solid rgb(175, 205, 240);
+                text-align: center;
+                margin-bottom: 25px;
+                
             }
         }
 
